--- a/_config.yml
+++ b/_config.yml
@@ -54,7 +54,7 @@ duoshuo_share: true                     # set to false if you want to use Commen
 ba_track_id: 
 # Google Analytics
 ga_track_id: 'UA-145886411-1'            # Format: UA-xxxxxx-xx
-ga_domain: huangxuan.me
+#ga_domain: huangxuan.me
 
 
 # Sidebar settings
