disqus username update (404이슈해결)

--- a/_config.yml
+++ b/_config.yml
@@ -41,7 +41,7 @@ anchorjs: true                          # if you want to customize anchor. check
 
 
 # Disqus settings
-disqus_username: jeans-blog
+disqus_username: tech-ahkeggqlkc
 
 # Duoshuo settings
 # duoshuo_username: kaijun
